# Skyent-dev

./: .gitignore  .instructions.md  LICENSE  Makefile  README.md
backend/: .env  .env.example  .env.sample  README.md  alembic.ini  pyproject.toml  pytest.ini
backend/app/: config.py  main.py
backend/app/analysis/: __init__.py  campaign_router.py  campaign_service.py  router.py  router_db.py  schemas.py  service.py  service_db.py
backend/app/builder/: __init__.py  router.py  service.py
backend/app/db/: __init__.py  all_models.py  base.py  dependencies.py  session.py
backend/app/db/models/: __init__.py  analysis.py  generation.py  moderation.py  publication.py
backend/app/db/repositories/: __init__.py  analysis_repository.py  generation_repository.py  moderation_repository.py  publication_repository.py
backend/app/generation/: README.md  __init__.py  dependencies.py  models.py  router.py  service.py
backend/app/model_selector/: __init__.py  router.py  service.py
backend/app/moderation/: README.md  __init__.py  dependencies.py  models.py  router.py  service.py  test_moderation.py
backend/app/profiling/: __init__.py  router.py  service.py
backend/app/publication/: __init__.py  dependencies.py  models.py  router.py  service.py
backend/app/tracking/: __init__.py  router.py  service.py
backend/app/websearch/: __init__.py  router.py  service.py
backend/examples/: README.md  generate_and_publish.py  generate_with_moderation.py  linkedin_posts.py  run_examples.sh
backend/migrations/: env.py
backend/scripts/: check_tables.py  create_tables.py
backend/tests/: conftest.py  run_e2e_tests.sh  test_analysis.py  test_analysis_api_db.py  test_analysis_api_db.py.bak  test_campaign_analysis.py  test_db_integration.py  test_db_integration.py.bak  test_e2e_api.py  test_e2e_data_persistence.py  test_e2e_error_handling.py  test_e2e_performance.py  test_gen_simple.py  test_generation_service.py  test_integration_generation_publication.py  test_integration_services.py  test_main.py  test_moderation.py  test_moderation_service.py  test_publication_service.py  test_websearch.py
docs/: domain_map.prompt.md
frontend/: README.md  index.html  package.json  pnpm-lock.yaml
(+1 files in other folders)
